# server/api/controllers/database/controller.js
@@ -1,0 +1,8 @@
+import EstudantesService from "../../services/estudantes.service";
+
+export class Controller {
+  popularBase(req, res) {
+    EstudantesService.popularBase().then(r => res.json(r));
+  }
+}
+export default new Controller();
