# server/api/controllers/database/router.js
@@ -3,6 +3,5 @@ import controller from './controller';
 
 export default express
   .Router()
-  .post('/', controller.create)
-  .get('/', controller.all)
-  .get('/:id', controller.byId);
+  .post('/popular', controller.popularBase);
+  
