# server/routes.js
@@ -1,5 +1,7 @@
-import examplesRouter from './api/controllers/examples/router';
+import estudantesRouter from './api/controllers/estudantes/router';
+import databaseRouter from './api/controllers/database/router';
 
 export default function routes(app) {
-  app.use('/api/examples', examplesRouter);
+  app.use('/api/estudantes', estudantesRouter);
+  app.use('/api/database', databaseRouter);
 }
